alignmant issue

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -778,7 +778,7 @@ a.mobActiveNav {
 }
 
 .blogNavItems {
-  width: 600px;
+  width: 400px;
   display: flex;
   justify-content: space-between;
 }
